swagger patch & other stuff fixed
