# docs/swagger.json
@@ -97,7 +97,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Store users",
+                "summary": "Update users",
                 "parameters": [
                     {
                         "type": "string",
@@ -143,7 +143,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Store users",
+                "summary": "Delete users",
                 "parameters": [
                     {
                         "type": "string",
@@ -180,7 +180,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Store users",
+                "summary": "UpdateName users",
                 "parameters": [
                     {
                         "type": "string",
@@ -191,10 +191,19 @@
                     },
                     {
                         "type": "string",
-                        "description": "User ID to update name and age",
+                        "description": "User ID to update lastName and age",
                         "name": "string",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "User lastName and age",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.updateNameRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -229,6 +238,17 @@
                 },
                 "nombre": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.updateNameRequest": {
+            "type": "object",
+            "properties": {
+                "apellido": {
+                    "type": "string"
+                },
+                "edad": {
+                    "type": "integer"
                 }
             }
         },
